# UR5

./: CMakeLists.txt  LICENSE  README.md  SQL_Analyse.py  config.yaml  data_log.db
control/: CMakeLists.txt  config.yaml  main.cpp
control/headers/: Data_saver.hpp  Gribber.hpp  Gripper.hpp  MainWindow.hpp  PixelToRobot.hpp  ProcessImage.hpp  Robot_arm.hpp  camera.hpp  captureImage.hpp  processImage.hpp
control/src/: CaptureImage.cpp  Data_saver.cpp  Gribber.cpp  Gripper.cpp  MainWindow.cpp  PixelToRobot.cpp  ProcessImage.cpp  Robot_arm.cpp  camera.cpp  captureImage.cpp  main.cpp  processImage.cpp
headers/: DataLogger.hpp  Data_saver.hpp  Gripper.hpp  MainWindow.hpp  PixelToRobot.hpp  ProcessImage.hpp  Robot_arm.hpp  systemInit.hpp
src/: DataLogger.cpp  Data_saver.cpp  Gripper.cpp  MainWindow.cpp  PixelToRobot.cpp  ProcessImage.cpp  Robot_arm.cpp  main.cpp  systemInit.cpp
test/: CMakeLists.txt  main.cpp
